# magicalSystem

./: .env_example  .gitignore  README.md  agent_dnd_converter.py  config.py  dnd_classes.py  dnd_converter.py  effect_creator.py  llm_prompts.py  llm_tools.py  orchestrator.py  pyproject.toml  rag_tools.py  requirements.txt
notebooks/: inspect_agent.ipynb
