[project]
name = "magicalsystem"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.18",
    "langgraph>=0.4.5",
    "ollama>=0.4.8",
    "openai>=1.79.0",
    "pandas>=2.3.0",
    "pydantic>=2.11.4",
]

[dependency-groups]
dev = [
    "graphviz>=0.20.3",
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "pygraphviz>=1.14",
]
